# Foundry

./: .gitignore  @openzeppelin_contracts_utils_cryptography_MessageHashUtils_sol_MessageHashUtils.abi  CHANGELOG.md  Cargo.toml  Dockerfile.complex-kappa  Dockerfile.mcp  LICENSE  Lean.toml  Makefile  Phase_Mirror_Loop_Goal.md  README.md  alp_sorry_manifest.json  build_all.sh  build_gated.py  contracts_AnchorRegistry_sol_AnchorRegistry.abi  lake-manifest.json  lakefile.lean  linear_cell.json  replace_sorry.py  simulation_results.csv
crates/ace-zk/: .gitignore  Ace-Zk_Specification.md  Adapter_Fidelity_Report.md  Cargo.toml  README.md  package.json
crates/ace-zk/circuits/: ace.circom  constraints.circom  poseidon2.circom
crates/ace-zk/scripts/: assert_r1cs_constraints.sh
crates/ace-zk/src/: csc.rs  ffi.rs  lib.rs  parity.rs  types.rs
crates/ace-zk/tests/: test_circuit_topology.rs  test_parity.py
crates/affine-core/: Cargo.toml
crates/affine-core/src/: lib.rs  triple_lock.rs
crates/agi-os-twin/: Adapter_Fidelity_Report.md  Agi-Os-Twin_Specification.md  Cargo.toml
crates/agi-os-twin/src/: clinical_validation.rs  cohort_generator.rs  lib.rs  social.rs
crates/air-mr64/: Adapter_Fidelity_Report.md  Air-Mr64_Specification.md  Cargo.toml
crates/air-mr64/src/: barrett.rs  bigint.rs  certificate.rs  executor.rs  guards.rs  lib.rs  miller_rabin.rs  primality.rs  support.rs
crates/air-mr64/tests/: barrett_lint.rs  column_order_lock.rs  oracle_corpus.rs
crates/alp/: Cargo.toml  README.md
crates/alp/src/: cnl.rs  engine.rs  lib.rs  llm.rs  wasm_bridge.rs
crates/alp/tests/: e2e_phase_mirror.rs
crates/artifactproxyexport/: Adapter_Fidelity_Report.md  Artifactproxyexport_Specification.md  Cargo.toml  README.md
crates/artifactproxyexport/src/: lib.rs
crates/artifactproxyexport/tests/: artifact_proxy.rs
crates/atlas/: Cargo.toml  run_stress_test.sh  test_action_2.sh  test_examiner.sh  test_guardian.sh  test_guardian_refactored.sh  test_triple_lock.sh  test_zk_export.sh
crates/atlas/atlas-cpu/: Adapter_Fidelity_Report.md  Atlas-Cpu_Specification.md  Cargo.toml
crates/atlas/atlas-embeddings/: Cargo.toml
crates/atlas/atlas-embeddings-v2/: Cargo.toml
crates/automorphic/: Adapter_Fidelity_Report.md  Automorphic_Specification.md  Cargo.toml  README.md  automorphic_learning.tex
crates/benchmarks/: Cargo.toml
crates/chain-adapter/: Adapter_Fidelity_Report.md  Cargo.toml  Chain-Adapter_Specification.md  README.md
crates/commons/: Cargo.toml
crates/compiler/: .gitmodules  Cargo.toml  test.pirtm
crates/complex-kappa/: Cargo.toml
crates/core/: Cargo.toml  linear_cell.json
crates/digital-twin/: Adapter_Fidelity_Report.md  Cargo.toml  Digital-Twin_Specification.md
crates/dilithium-signer/: Cargo.toml
crates/drmm/: Cargo.toml  README.md
crates/echo-kernel/: Adapter_Fidelity_Report.md  Cargo.toml  Echo-Kernel_Specification.md  script.py  script_1.py
crates/fermat-certifier/: Adapter_Fidelity_Report.md  Cargo.toml  Fermat_Certifier_Specification.md  README.md
crates/genesis-ode/: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  lake-manifest.json  lakefile.lean  main.md  pyproject.toml  run_tests.sh
crates/goldilocks/: Adapter_Fidelity_Report.md  Cargo.toml  Goldilocks_Specification.md
crates/goldilocks-pro/: Adapter_Fidelity_Report.md  Cargo.toml  Goldilocks-Pro_Specification.md  README.md  USER_GUIDE.md  secure_enclave_modulus.txt
crates/governance/: Cargo.toml  README.md
crates/hcalc/: Adapter_Fidelity_Report.md  Cargo.toml  Hcalc_Specification.md  README.md
crates/health-sdk/: Adapter_Fidelity_Report.md  Cargo.toml  Health-Sdk_Specification.md
crates/hybrid-quantum/: Adapter_Fidelity_Report.md  Cargo.toml  Hybrid_Quantum_Specification.md  README.md
crates/hypercompute/: Adapter_Fidelity_Report.md  Cargo.toml  Hypercompute_Specification.md
materia_commons/: Cargo.toml  README.md  build.rs  generate_rust_vals.py
materia_commons/ADR/: ADR_012_Production_Wiring.md  ADR_013_VIN_Loop_Consensus.md
materia_commons/capsule/: .zenodo.json  ANNOUNCEMENT_DRAFT.md  CITATION.cff  Dockerfile  Multiplicity Social Physics.tex  README.md  RELEASE_NOTES.md  UAC_MSP_Integration_Paper.tex  harness.sh  references.bib  reproducibility_appendix.tex
materia_commons/compliance/: manifest.json
materia_commons/config/: vdf_modulus.hex.example
materia_commons/examples/: resolvent_scan.rs  spectral_bridge.rs
materia_commons/mcp_server/: github_adapter.py  python_proxy.py  tool_registry.yaml
materia_commons/meta-theorem/: Meta_Theorem_of_Prime_Identity.tex  basis_factors.json  export_basis.py  gen_real_basis.py  lake-manifest.json  lakefile.lean
materia_commons/operator-atlas/: tier4_healthcare.yaml  tier5_social_physics.yaml
materia_commons/pirtm-vscode/: language-configuration.json  package.json  snippets.json
materia_commons/schemas/: CompilationResult.json  ConstitutionModel.json  ConstitutionViolation.json  CritiqueResult.json  ExternalIssuerConfig.json  IdentityOnboardingConfig.json  L0Invariant.json  LedgerHistoryEntry.json  McpRegistry.json  McpServerDescriptor.json  PrimeGate.json  ProposalEntry.json  ProposalRequest.json  ReplicationConfig.json  ReplicationRole.json  SignedAdmissionToken.json  SpoliationRiskLevel.json  Task.json  ToolResponse.json  TrustLevel.json  UnifiedWitness.json  UniquenessAnchor.json  UniquenessAnchorInput.json  ValidatedIdToken.json  VerifiedVerifiableCredential.json  VetoStatus.json  Workflow.json
materia_commons/sedona-spine/: Sedona Spine.tex  references.bib
materia_commons/src/: constitution.rs  generated_vals_array.rs  hamiltonian.rs  identity.rs  ledger.rs  lib.rs  proofs.rs  spectral_bridge.rs  spectral_resolvent.rs  task.rs  types.rs
materia_commons/state/: constitution.json  mcp_registry.yaml
materia_commons/tests/: schema_drift_test.rs
rust/: Cargo.toml  libffi.rlib  libterm.rlib
rust/benches/: completion_bench.rs
rust/src/: associator.rs  completion.rs  control_surface.rs  ffi.rs  lib.rs  partial_system.rs  quantum_backend.rs  telemetry.rs  term.rs  union_find.rs
(+5779 files in other folders)
