[workspace]
members = [
    "materia_commons",
    "crates/core",
    "crates/engine",
    "crates/ace-scn-csc",
    "crates/gut-pc",
    "crates/xi-formal",
    "crates/zmod",
    "crates/prms",
    "crates/echo-kernel",
    "phase-mirror-agent",
    "crates/lean-sdk",
    "crates/riemann-zeta",
    "crates/prime-mirror-verification",
    "models/ataraxia",
    "models/commander",
    "models/echobraid",
    "models/finton",
    "models/generalist",
    "models/legalese-scopist",
    "models/the-examiner",
    "models/the-genius",
    "models/the-guardian",
    "models/the-publisher"
  , "docs/adr/RustADR", "lean/Core/prime_tensors/sedona_spine", "crates/pirtm-compiler", "crates/drmm", "crates/zmos", "crates/sigma", "crates/strata", "crates/pirtm-stdlib", "crates/ace", "crates/fermat-certifier", "crates/recursive-prover", "crates/xi-compiler", "crates/automorphic", "crates/hybrid-quantum", "crates/alp", "crates/verification-sdk", "crates/orf", "crates/moc", "crates/zrsd", "crates/digital-twin", "crates/prime-quantum", "crates/ike", "crates/ptqe", "crates/cv-multiplicity", "crates/potu", "crates/zmod", "crates/parm", "crates/prms",     "crates/xi-formal", "crates/roc", "crates/wasm-bridge", "crates/meta-relativity", "crates/affine-core", "crates/ace-governance", "crates/ace-certify", "crates/kani-verification", "crates/abd_framework/rust_f1_square", "crates/tests/rust-mtpi-tests", "crates/pirtm-tensor", "crates/pirtm-orchestration",     "crates/dilithium-signer",
    "crates/goldilocks",
    "crates/goldilocks-pro",
    "crates/langlands",
    "crates/drmm_ir_parser",
    "crates/complex-kappa",]
[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["PhaseMirror"]
license = "MIT"
repository = "https://github.com/PhaseMirror/Prime"
homepage = "https://github.com/PhaseMirror/Prime"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
hex = "0.4"
thiserror = "1.0"
num-bigint = { version = "0.4", features = ["serde"] }
num-integer = "0.1"
num-traits = "0.2"
uint = "0.9"
rayon = "1.8"
bytemuck = "1.14"
anyhow = "1.0"

[package]
name = "multiplicity"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
multiplicity-common = { path = "materia_commons" }

[dev-dependencies]
# Dependencies needed for integration tests (Track B)
# Async runtime and WebSocket client used by the test harness
tokio = { version = "1", features = ["full"] }
# WebSocket client for the integration test
tokio-tungstenite = "0.20"
# Allows the test to import the agent crate as a library (if needed)
phase-mirror-agent = { path = "phase-mirror-agent" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# The real 108-cycle verification engine exercised by the integration test
lean-sdk = { path = "crates/lean-sdk" }
