[package]
name = "multiplicity-common"
version = "1.0.0-alpha"
authors = ["PhaseSpace"]
edition = "2021"
license = "MIT"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
chrono = "0.4"
schemars = "0.8"
uuid = { version = "1.3", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
