[package]
name = "multiplicity-common"
version = "1.0.0-alpha"
authors = ["PhaseSpace"]
edition = "2021"
license = "MIT"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
chrono = "0.4"
schemars = "0.8"
uuid = { version = "1.3", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
nalgebra = "0.32"
num = "0.4"

# [dev-dependencies]
# kani = { git = "https://github.com/model-checking/kani" }

[[example]]
name = "spectral_bridge"
path = "examples/spectral_bridge.rs"

[[example]]
name = "resolvent_scan"
path = "examples/resolvent_scan.rs"

[profile.dev]
opt-level = 1

[features]
# Enable Kani bounded model checking proofs
kani = []

[profile.release]
lto = true
