[package]
name = "multiplicity-common"
version = "1.0.0-alpha"
authors = ["PhaseSpace"]
edition = "2021"
license = "MIT"


[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
schemars = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
nalgebra = "0.32"
num = "0.4"

# [dev-dependencies]
# kani = { git = "https://github.com/model-checking/kani" }

[[example]]
name = "spectral_bridge"
path = "examples/spectral_bridge.rs"

[[example]]
name = "resolvent_scan"
path = "examples/resolvent_scan.rs"

[profile.dev]
opt-level = 1

[features]
# Enable Kani bounded model checking proofs
kani = []

[profile.release]
lto = true
