[package]
name = "prime-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["PhaseMirror"]
license = "MIT"

[dependencies]
nalgebra = "0.32"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
kani = "0.0.1"
criterion = { version = "0.5", features = ["html_reports"] }

[lib]
path = "src/lib.rs"

[[bench]]
name = "completion_bench"
harness = false

[[test]]
name = "completion_test"
path = "tests/integration/completion_test.rs"

[[test]]
name = "quantum_test"
path = "tests/integration/quantum_test.rs"

[[test]]
name = "proptest"
path = "tests/property/proptest.rs"

[features]
default = []
kani-verify = []
