[package]
name = "prime-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["PhaseMirror"]
license = "MIT"

[dependencies]
nalgebra = "0.32"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
kani = "0.0.1"
criterion = { version = "0.5", features = ["html_reports"] }

[lib]
path = "src/lib.rs"

[[bench]]
name = "completion_bench"
harness = false

[[test]]
name = "completion_test"
path = "tests/integration/completion_test.rs"

[[test]]
name = "quantum_test"
path = "tests/integration/quantum_test.rs"

[[test]]
name = "proptest"
path = "tests/property/proptest.rs"

[[test]]
name = "adr_status_transition_harness"
path = "tests/kani/adr_status_transition_harness.rs"

[[test]]
name = "adr_supersession_acyclic_harness"
path = "tests/kani/adr_supersession_acyclic_harness.rs"

[[test]]
name = "adr_consequence_entailment_harness"
path = "tests/kani/adr_consequence_entailment_harness.rs"

[[test]]
name = "anomaly_threshold_valid_harness"
path = "tests/kani/anomaly_threshold_valid_harness.rs"

[features]
default = []
kani-verify = []
