[package]
name = "ace-zk_pkg"
version = "1.0.0-alpha"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = { version = "0.16", features = ["serde"] }
pyo3 = { version = "0.20", features = ["extension-module"] }
thiserror = "1.0"
hex = "0.4"

[dev-dependencies]
serde_json = "1.0"

[lib]
name = "ace_zk"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
