[package]
name = "affine-core"
version = "1.0.0-alpha"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
chrono = "0.4"
blake3 = "1.5"

[dev-dependencies]
kani = "0.0.1"

[dependencies.archivum]
path = "../archivum"
optional = true

[features]
archivum = ["dep:archivum"]
triple-lock = ["archivum"]
