[package]
name = "agi-os-twin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
nalgebra = "0.33"
umc-parom = { package = "rust_core_v2", path = "../parom" }
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"
rand = "0.9.4"
csv = "1.3"
sha2 = "0.10.9"
hex.workspace = true
rand_distr = "0.5.1"
rand_chacha = "0.9.0"
trace-serializer = { path = "../trace-serializer" }
