[package]
name = "air-mr64"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
goldilocks = { path = "../goldilocks" }
trace-serializer = { path = "../trace-serializer" }
serde = { workspace = true }
serde_json = { workspace = true }
uint = { workspace = true }
hex = { workspace = true }
num-bigint = { workspace = true }
num-integer = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
