[package]
name = "alp-rs"
version = "1.0.0-alpha"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
unicode-segmentation = "1.13.2"
schemars = { workspace = true }
multiplicity-common = { workspace = true }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.5"
