[package]
name = "alp-rs"
version = "1.0.0-alpha"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
unicode-segmentation = "1.13.2"
schemars = "0.8"
multiplicity-common = { path = "../../materia_commons" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.5"

[dev-dependencies]
kani = "0.0.1"
