[package]
name = "artifactproxyexport"
version = "1.0.0-alpha"
edition = "2021"

[dependencies]

# Intentionally standalone: the root workspace (crates/commander-core) has
# pre-existing compile errors unrelated to this bundle.  Integrating here would
# cause `cargo test` at repo root to fail for reasons outside this crate's scope.
# Re-evaluate once crates/commander-core is fixed.

