[package]
name = "moc-v2-tools"
version = "1.0.0-alpha"
edition = "2021"
license = "MIT"
description = "Phase Mirror Verified Substrates - Rust Tools"

[[bin]]
name = "moc-bridge"
path = "src/bridge.rs"

[[bin]]
name = "moc-verifier"
path = "src/verifier.rs"

[[bin]]
name = "moc-guardian"
path = "src/guardian.rs"

[[bin]]
name = "moc-examiner"
path = "src/examiner.rs"

[[bin]]
name = "moc-publisher"
path = "src/publisher.rs"

[[bin]]
name = "moc-ablation"
path = "src/ablation_pitn.rs"

[[bin]]
name = "moc-zk-exporter"
path = "src/zk_exporter.rs"

[[bin]]
name = "pirtm-runtime"
path = "src/runtime.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
md5 = "0.7.0"
lexpr = "0.2"
blake3 = "1.5"
rand = "0.8"
chrono = "0.4"

[dev-dependencies]
rand = "0.8"
