[package]
name = "automorphic-rs"
version = "1.0.0-alpha"
edition = "2021"

[dependencies]
nalgebra = { version = "0.34.2", features = ["serde-serialize"] }
num-complex = "0.4.6"
num-traits = "0.2.19"
rand = "0.10.1"
rand_distr = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
statrs = "0.18.0"
thiserror = "2.0.18"
