[package]
name = "pirtm-bench"
version = "1.0.0-alpha"
edition = "2021"

[dependencies]
pirtm-parser = { path = "../parser" }
pirtm-mlir = { path = "../mlir" }
pirtm-lexer = { path = "../lexer" }
pirtm-monitor = { path = "../monitor" }
serde_json = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "full_pipeline"
harness = false