[package]
name = "chain-adapter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

alloy = { version = "0.5", features = ["full", "provider-http", "signers"] }
tokio = { version = "1.0", features = ["full"] }
hex.workspace = true
async-trait = "0.1.89"
url = "2.5.8"
