[package]
name = "multiplicity-common-types"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
schemars.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
sha2 = { workspace = true }
hex = { workspace = true }
