[package]
name = "pirtm-compiler"
version = "1.0.0-alpha"
edition = "2021"
description = "PIRTM compiler with governance and Lean verification"

[[bin]]
name = "pirtm"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
pirtm-parser = { path = "../parser" }
pirtm-mlir = { path = "../mlir" }
telemetry-recorder = { path = "../telemetry-recorder" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"

[dev-dependencies]
pirtm-monitor = { path = "../monitor" }
tempfile = "3"
scopeguard = "1.2"

