[package]
name = "complex-kappa"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Complex Gravitational Coupling computational kernels with Kani verification"

[dependencies]
num-complex = "0.4"
ndarray = "0.15"
rand = "0.8"
rand_chacha = "0.3"
thiserror = "1.0"

[dev-dependencies]
proptest = "1.4"

[features]
default = []
