[package]
name = "pirtm-rs"
version = "1.0.0-alpha"
edition = "2021"

[[bin]]
name = "pirtm-core"
path = "src/main.rs"

[[bin]]
name = "uac_simulator"
path = "src/bin/uac_simulator.rs"

[dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
ndarray = { version = "0.16", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
num-prime = "0.4"
num-integer = "0.1"
sha2 = "0.10"
hex = "0.4"
blake3 = "1.5"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
k256 = { version = "0.13", features = ["ecdsa"] }

[dev-dependencies]
tempfile = "3"

