[package]
name = "digital-twin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
anyhow.workspace = true
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex.workspace = true
bitflags = "2.4"
