[package]
name = "dilithium-signer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pqcrypto-dilithium = "0.5.0"
pqcrypto-traits = "0.3.5"
hex = "0.4"
clap = { version = "4.4", features = ["derive"] }
