[package]
name = "drmm_rs"
version = "1.0.0-alpha"
edition = "2024"

[dependencies]
ndarray = "0.16"
num-traits = "0.2"
num-prime = "0.4"
rustfft = "6.2"
num-complex = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
libm = "0.2"

[dev-dependencies]
proptest = "1.5"
