[package]
name = "echo-kernel-rs"
version = "1.0.0-alpha"
edition = "2021"
license = "MIT"
authors = ["Multiplicity Foundation"]

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
petgraph = "0.6"
regex = "1"
once_cell = "1"
tempfile = "3"

[dev-dependencies]
