[package]
name = "fermat-certifier-rs"
version = "1.0.0-alpha"
edition = "2024"

[dependencies]
ndarray = { version = "0.17.2", features = ["serde"] }
num-traits = "0.2.19"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
blake3 = "1.3"

[dev-dependencies]
