[project]
name = "genesis-governance"
version = "0.5.0"
description = "Governed experimental nonlinear systems-dynamics architecture"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Allan Christopher Beckingham", email = "allan@cdl.lab" }
]
dependencies = [
    "numpy>=2.1.3",
    "pydantic>=2.10.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-archon",
]

[project.scripts]
genesis = "genesis_governance.cli.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
