[package]
name = "goldilocks-arithmetic-kernel"
version = "1.0.0-alpha"
edition = "2024"

[dependencies]
# Basic utilities
paste = "1.0"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-bigint = { version = "0.4", features = ["serde"] }
sha2 = "0.11"
sha3 = "0.12"
rand = "0.8"
anyhow = "1.0"
thiserror = "2.0"
num-prime = "0.4.4"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
tracing = "0.1"
[dev-dependencies]
proptest = "1.5"
criterion = "0.5"

[[bench]]
name = "arithmetic"
harness = false

[[bin]]
name = "generate_modulus"
path = "src/bin/generate_modulus.rs"
