[package]
name = "goldilocks"
version = "1.0.0-alpha"
edition = "2021"

[features]
# Enable Kani verification harnesses
kani = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.19.0"
serde_json = "1.0"
thiserror = "2.0.18"

[dev-dependencies]
rand = "0.8"
criterion = "0.5"
kani = "0.0.1"

[[bench]]
name = "field_ops"
harness = false
