[package]
name = "governance-core-rs"
version = "1.0.0-alpha"
edition = "2024"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.15", features = ["v4", "serde", "js"] }
sha2 = "0.10"
hex = "0.4"
regex = "1.11"
num-prime = "0.4"
validator = { version = "0.20", features = ["derive"] }
tempfile = "3.10"
walkdir = "2.5"
redis = { version = "0.27", features = ["tokio-comp"], optional = true }
tokio = { version = "1.37", features = ["full"], optional = true }

[features]
default = ["coupling"]
coupling = ["redis", "tokio"]

[dev-dependencies]
proptest = "1.4"
[workspace]
