[package]
name = "hcalc-rs"
version = "1.0.0-alpha"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
nalgebra = { version = "0.34.2", features = ["serde-serialize"] }
ndarray = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
