[package]
name = "health-sdk"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
wasm-bindgen = "0.2.121"
serde-wasm-bindgen = "0.6"
multiplicity-alp = { path = "../../substrates/alp", package = "alp-rs" }
