[package]
name = "hybrid-quantum-rs"
version = "1.0.0-alpha"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
faer = { version = "0.24.0", features = ["std"] }
faer-ext = "0.7.1"
lazy_static = "1.5.0"
nalgebra = { version = "0.33.0", features = ["serde-serialize"] }
ndarray = "0.17.2"
num-complex = "0.4.6"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.1", features = ["v4"] }

[dev-dependencies]
