[package]
name = "hypercompute-rs"
version = "1.0.0-alpha"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
hex = "0.4.3"
ndarray = { version = "0.17.2", features = ["serde"] }
num-traits = "0.2.19"
rand = "0.10.1"
rand_distr = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"
